# api.fabianlars.de

./: .gitignore  Cargo.toml  README.md  openapi.json
.github/workflows/: ci.yml  deploy.yml  format.yml  test.yml
sql/: rotations.sql
src/: docs.rs  main.rs
src/http/: league.rs  mod.rs  updater.rs
src/http/league/: champions.rs  rotations.rs
