[package]
authors = ["FabianLars"]
edition = "2018"
name = "api"
resolver = "2"
version = "0.1.0"

[profile.release]
panic = 'abort'

[dependencies]
anyhow = "1.0"
axum = "0.2"
chrono = {version = "0.4", features = ["serde"]}
log = "0.4"
pretty_env_logger = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
version-compare = "0.1"
